welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:44: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      	return true
               ^SnakeBuggle:44: warning: enclosing method pos has result type Unit: return value discarded
      	return true
        ^SnakeBuggle:50: error: Boolean does not take parameters
  }else(getDirection()==Direction.OUEST){
                                        ^