welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
	setCouleurCorps(Color.blue)
  baisseBrosse()
  while (pos()!=true){
    serpent()
  }

}




def serpent(){
  
  if (estFaceMur()==true){

  	
  	if (getDirection()==Direction.EST){
    	gauche()
    	avance()
    	gauche()
    
  	}else if(getDirection()==Direction.OUEST){
    	droite()
    	avance()
    	droite()
  }
  }else{
    avance()
    
  }
}




def pos(){
  
	if ( estFaceMur()==true){
  	if (getDirection()==Direction.EST){
    	gauche()
    	if (estFaceMur()){
      	droite()
      	return true
    	}else{
      droite()

    
  }
  }else(getDirection()==Direction.OUEST){
    droite()
    if (estFaceMur()){
    	gauche()
        return true
    }else{
      gauche()
   }
   
    }
}
}
 
   